Overflow fixed, overflow-y: hidden

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -96,10 +96,6 @@ main {
 }
 
 .healtcare {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 20px;
-
     h1 {
         width: 60vw;
         align-self: flex-start;
@@ -115,7 +111,6 @@ main {
     }
 
     .card-product {
-        min-width: 170px;
         margin-top: 30px;
         background-color: $rosa;
         display: flex;
@@ -367,6 +362,10 @@ footer {
     }
 
     .healtcare {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        padding: 20px;
+
         .product-cards {
             display: flex;
             overflow-x: scroll;
@@ -451,7 +450,6 @@ footer {
             width: 1000px;
             height: 400px;
             margin: 20px;
-            margin-right: 60px;
         }
     }
 
@@ -459,14 +457,17 @@ footer {
         display: flex;
         align-items: center;
         flex-direction: column;
+        border: 1px solid black;
+        overflow-y: hidden;
     }
 
     .product-cards {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        justify-items: center;
-        margin: 0;
-        padding: 0;
+        border: 1px solid blue;
+        display: flex;
+        width: 90%;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 
     .whyUs {
@@ -486,7 +487,6 @@ footer {
         justify-content: center;
         flex-direction: row;
         gap: 30px;
-        margin: 0 auto;
         padding: 10px;
         margin-top: 20px;
     }
